<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always|collapseActionView">
        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/sort_by_date_created"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_hide_completed_task"
        app:showAsAction="never"
        android:checkable="true"
        android:title="@string/hide_completed"/>
    <item
        android:id="@+id/action_delete_all_completed"
        android:title="@string/delete_completed_tasks"
        app:showAsAction="never"/>
</menu>